# WebDataParser

./: .gitignore  Pasted---1728121825541.txt  README.md  config.py  main.py  pyproject.toml  replit.nix
scraper/: items.py  middlewares.py  pipelines.py  settings.py
scraper/spiders/: harrods_spider.py  stockx_spider.py
utils/: async_helper.py  data_cleaner.py
